could not solve overlapping divs ahhhhhh

--- a/style.css
+++ b/style.css
@@ -12,31 +12,38 @@ You will find this is far easier than the opposite task of using CSS to cram you
 @import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css');
 /* Start your base/mobile styles here */
 
-* {
-  box-sizing: border-box;
+
+.byline {
+  font-size: 12px;
 }
 
-html, body {
-  /* Sets default font-size to 16px, ensuring 1em = 16px; */
-  font-size: 16px;
-}
+.container {
+  max-width: 750px;
+  margin: auto;
+  /* padding: 10px; */
 
-.container .disease {
-  max-width: 180px;
-  margin: 0 auto;
-  padding: 5px;
-  min-height: 250px;
 }
-
-.disease .front, .data {
-  position: absolute;
+.article, .articleii, .interactiveelem, .hold-image, .byline {
   width: 100%;
+  padding: 15px;
+  border: 1px;
+  border-color: black;
+  border-style: solid;
+}
+
+
+.disease {
+  padding: 5px;
+}
+
+.disease, .front, .data {
+  position: absolute;
+  /* width: 100%; */
   height: 100%;
   transition: .5s transform ease-in-out;
   backface-visibility: hidden;
   text-align: center;
   max-width: 180px;
-  margin: 0 auto;
   min-height: 250px;
   padding: 5px;
   box-sizing: border-box;
@@ -97,19 +104,26 @@ html, body {
   padding: 5px;
 }
 
+
+.hold-image img {
+  max-width: 100%;
+}
+
 select {
   display: block;
   width: 100%;
 }
 
-/*
-.data {
-  display: none;
+
+
+* {
+  box-sizing: border-box;
 }
 
-.data.active {
-  display: block;
-} */
+html, body {
+  /* Sets default font-size to 16px, ensuring 1em = 16px; */
+  font-size: 16px;
+}
 
 /* Tablet/Desktop overrides */
 
@@ -119,9 +133,11 @@ select {
     width: 100%;
     max-width: 50%;
   }
+
   .filter {
     max-width: 82%;
   }
+
   body {
     width: 70%;
   }
